--- a/firstProject/css/style.css
+++ b/firstProject/css/style.css
@@ -72,6 +72,17 @@ footer {
 
 }
 
+.location-button{
+    background-color: #F2F2F2;
+    padding: 10px;
+    width: 50px;
+    height: 50px;
+    margin-top: 5px;
+    border-radius: 15px;
+    border: none;
+
+}
+
 /*Hotel Links: Mareille Accommodation*/
 .hotel-links a{
     color: black;
@@ -90,6 +101,7 @@ footer {
     border-radius: 15px;
     font-weight: 800;
     color: #000000;
+    flex: 1;
 }
 
 #search-engine{
@@ -423,10 +435,11 @@ header {
     }
    
     .nav-links{
-    display: flex;
-    gap: 20px;
-    align-items: center;
-    font-size: 50px;
+        display: flex;
+        gap: 0;
+        align-items: center;
+        font-size: 50px;
+        width: 100%;
    
     }
 
@@ -459,6 +472,18 @@ header {
     color: #0065FC;
 
 }
+.location-button{
+    background-color: #F2F2F2;
+    padding: 10px;
+    width: 100px;
+    height: 130px;
+    margin-top: 5px;
+    border-radius: 15px;
+    border: none;
+    margin-bottom: 20px;
+    margin-right: 5px;
+
+}
 .Filters p{
     grid-row: 1 / 2;
     grid-column: 1 / 3;
@@ -477,6 +502,7 @@ header {
 }
 
     .search-engine {
+        width: 100%;
         display: flex;
         justify-content: center;
         align-items: center;
@@ -486,7 +512,7 @@ header {
         box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
     }
     .icon-wrapper {
-        display: inline-block;
+        display: flex;
         padding: 8px;
     }
     
@@ -509,7 +535,7 @@ header {
     }
     
     form input[type="text"] {
-        width: 600px;
+        width: 750px;
         height: 100px; /* Set height to 50px */
         padding: 0 10px;
         border: 1px solid #000000;
@@ -569,7 +595,7 @@ header {
     font-size: 40px;
 }
 .info{
-    font-size: 30px;
+    font-size: 50px;
 }
 /*
 .accommodation-and-popular {
